# IL_PilotNet

./: .gitignore  README.md  pilotnet_model.py  pyproject.toml
for_real_car/: .gitignore  README.md  convert_mcap_to_pilotnet_dataset.py  il_pilotnet_inference.py  inspect_real_dataset.py  preview_real_preprocessing.py  real_data_splits.json  train_real_pilotnet.py  yws_il_pacmod_driver.py
for_simulator/: README.md  train_pilotnet.py
for_simulator/scripts/: metadata_to_teacher_paths.py  run_container_and_compile.sh
pilotnet_runs/run_real_gem4_lane_follow_full_001/: metrics.json  test_metrics.json  train_args.json
pilotnet_runs/run_teacher_student_13sessions_stronger_001/: best_model.pt
